# hydralite

./: .eslintignore  .eslintrc.js  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  docker-entrypoint.sh  package.json  setup.cmd  setup.sh
.devcontainer/: README.md  flutter.bashrc
.github/: labeler.yml
api/: .env.example  .gitignore  Dockerfile  README.md  default.env  docker-entrypoint.sh  jest.config.js  package.json  setup.js  tsconfig.json
archived/: Dockerfile  docker-compose.yml  docker-entrypoint.sh  fetchThemeColors.ts  schema.prisma
automation/: tags.py
bot/: data.ts  index.ts  package-lock.json  package.json  tsconfig.json  types.ts
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/commands/add/: command.rs
cli/src/commands/explore/: command.rs
cli/src/commands/get/: command.rs
cli/src/commands/push/: command.rs
cli/src/model/: app.rs  command.rs  map.rs  mod.rs
cz-commitlint-config/: AUTHORS  CHANGELOG.md  README.md  adapter.js  custom-types.json  customizations.json  cz.js  engine.js  index.js  package.json  schema.json
docker/: package.json  redis.conf
hydrabot/: .gitignore  Dockerfile  docker-compose.yml  package.json  tsconfig.json
landing/: package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
mobile/: Session.vim  pubspec.yaml
web/: .gitignore  .prettierrc  Dockerfile  constantVars.ts  constants.ts  next.config.js  package.json  pnpm-lock.yaml  svelte.config.js  (+3 more)
(+468 files in other folders)
